# Multi_agent

./: .env  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  md5.text  pyproject.toml  start.bat  网址
agent/: react_agent.py  supervisor.py  workflow.py
agent/specialists/: __init__.py  knowledge_agent.py  report_agent.py  weather_agent.py
agent/tool/: agent_tools.py  middleware.py
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
api/: main.py  stats.py
chroma_db/: chroma.sqlite3
config/: chroma.yml  database.yml  prompts.yml  rag.yml  tool.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/stores/: auth.js  chat.js
frontend/src/views/: Chat.vue  Knowledge.vue  Login.vue
model/: factory.py
models/: __init__.py  db_models.py
prompt/: knowledge_prompt.txt  main_prompt.txt  report_prompt.txt  supervisor_prompt.txt  weather_prompt.txt
rag/: hybrid_retriever.py  keyword_retriever.py  rag_service.py  vector_store.py
rag/chroma_db/: chroma.sqlite3
scripts/: init_db.sql  init_postgres.py  view_data.py
tests/: conftest.py
tests/unit/: test_auth_service.py  test_rag_service.py  test_supervisor.py  test_vector_store.py  test_workflow.py
utils/: auth_service.py  chat_session_service.py  config_handler.py  db_pool.py  file_handler.py  langsmith_tracker.py  logger_handler.py  path_tool.py  prompt_loader.py  token_callback.py  token_stats_service.py  token_tracker.py
