[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-customer-service"
version = "1.0.0"
description = "AI智能客服 — 多Agent协作RAG问答系统（扫地机器人领域）"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.22",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.1.2",
    "pyjwt>=2.8.0",
    "pydantic[email]>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "dashscope>=1.17.0",
    "pypdf>=3.17.0",
    "openpyxl>=3.1.2",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.23",
    "tenacity>=8.2.3",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --cov=agent --cov=rag --cov=utils --cov=api --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["__pycache__", "*.pyc", ".git", "node_modules", "dist", "venv"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
exclude = ["__pycache__", ".git", "node_modules", "dist"]

[tool.coverage.run]
source = ["agent", "rag", "utils", "api", "model"]
omit = ["*/__pycache__/*", "*/tests/*"]
